Removed old version of project

--- a/src/project_website_v1/index.html
+++ b/src/project_website_v1/index.html
@@ -8,22 +8,46 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Project</h1>
+        <h1>Dynamic AI grounding benchmark for notations</h1>
+        <h4>Project by Kamen Damov with Prof. Ian Arawjo</h4>
         <nav>
             <ul>
-                <li><a href="#weekly-updates">Weekly Updates</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Weekly Updates</a>
+                    <div class="dropdown-content">
+                        <a href="#week1">Week 1</a>
+                        <a href="#week2">Week 2</a>
+                        <a href="#week3">Week 3</a>
+                        <a href="#week4">Week 4</a>
+                        <!-- Additional weeks can be added here -->
+                    </div>
+                </li>
                 <li><a href="#about">About the Project</a></li>
             </ul>
         </nav>
     </header>
-    <section id="weekly-updates">
-        <h2>Weekly Updates</h2>
-        <p>Here you can see our progress each week.</p>
-    </section>
     <section id="about">
         <h2>About the Project</h2>
-        <p>This project is an initiative to explore advanced topics in artificial intelligence.</p>
+        <p>This project, in collaboration with Ian Arawjo (Assistant Researcher at University of Montreal and Mila). The objective of the project is to </p>
     </section>
+    <!-- Weekly updates sections -->
+    <section id="week1" class="week">
+        <h2>Week 1</h2>
+        <p>Details of week 1 progress...</p>
+    </section>
+    <section id="week2" class="week">
+        <h2>Week 2</h2>
+        <p>Details of week 2 progress...</p>
+    </section>
+    <section id="week3" class="week">
+        <h2>Week 3</h2>
+        <p>Details of week 3 progress...</p>
+    </section>
+    <section id="week4" class="week">
+        <h2>Week 4</h2>
+        <p>Details of week 4 progress...</p>
+    </section>
+    <!-- More weeks can be added similarly -->
     <footer>
         <p>Copyright © 2024 University of Montreal</p>
     </footer>
