Added github repo

--- a/src/project_website_v1/index.html
+++ b/src/project_website_v1/index.html
@@ -23,6 +23,7 @@
                     </div>
                 </li>
                 <li><a href="#about">About the Project</a></li>
+                <li><a href="https://github.com/chiragoel/Dynamic_notation">Github Repository</a></li>
             </ul>
         </nav>
     </header>
